--- a/404.html
+++ b/404.html
@@ -2,4 +2,4 @@
 layout: default
 permalink: /404.html
 ---
-<h1>404! Page not found Please contact shiyich@umich.edu </h1>
+<h1>404! Page not found. Please contact shiyich@umich.edu </h1>
